Topic/bug fix 3 (#64)
* Navbar.jsx: fix leave link from loading root page
CameraGesture.jsx: minor formatting, reduce chatty console on QUIT gamestate

* Infopanel remove GDE image max-height (images now resized)

* custom.css: shrink Market display rows to fit entire game on single screen

* InfoTabs.js: add responsive classes to hide Order History tab on smaller screens (otherwise wraps and creates excess off-screen)

* Messages.jsx: add setTimeout trigger to change Message color state from active to inactive
(due to InfoTabs memo)

--- a/web/src/styles/App.css
+++ b/web/src/styles/App.css
@@ -350,9 +350,3 @@ table#gestureDecision.table {
   max-height: 8rem;
   filter: drop-shadow(4px 4px 8px #666666);
 }
-
-@media (min-width: 768px) {
-  #gestureDecisionEvent-tab-image {
-    max-height: 12rem;
-  }
-}
